Change the search_activity layout to show what has been searched for

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="newest_headline">Newest</string>
 
     <string name="search_title">Search</string>
+
+    <string name="search_query">Searched for:</string>
 </resources>
