Fix all the IDs in sidebar_menu.xml, all item working by now

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="search_title">Search</string>
 
     <string name="search_query">Searched for:</string>
+    <string name="art_and_design">Art and design</string>
 </resources>
