--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,5 @@
     <string name="newest">Newest</string>
     <string name="oldest">Oldest</string>
     <string name="relevance">Relevance</string>
+    <string name="read_more">Read more</string>
 </resources>
