Optimize the Chrome Custom Tab, prevent memory leak Add the progress bar to read_content.xml file

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,5 @@
     <string name="oldest">Oldest</string>
     <string name="relevance">Relevance</string>
     <string name="read_more">Read more</string>
+    <string name="this_is_a_thumbnail">This is a thumbnail</string>
 </resources>
