--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="relevance">Relevance</string>
     <string name="read_more">Read more</string>
     <string name="this_is_a_thumbnail">This is a thumbnail</string>
+    <string name="no_internet">No internet connection. Tap to retry.</string>
 </resources>
