--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,5 @@
     <string name="read_more">Read more</string>
     <string name="this_is_a_thumbnail">This is a thumbnail</string>
     <string name="no_internet">No internet connection. Tap to retry.</string>
+    <string name="found_nothing">Found nothing</string>
 </resources>
